examples/neg/unbound_type.effekt
module examples/pos/lexer

import string
import text/regex

effect EOS(): Nothing
effect LexerError(msg: String, pos: Position): Nothing

interface Lexer {
  def peek(): Option[Token]
  def next(): Token
}

def lexer[R](in: String) { prog: => R / Lexer } : R / LexerError = {
    try { prog() } with Lexer {
        def peek() = resume(None())
        def next() =
            {
                lexeme()
            }
    }
}
